--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "LiveScript": "1.1.x",
     "googleapis": "~0.6.1",
     "xdg": "~0.1.1",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "dredd": "0.3.9"
   }
 }
